testsuite/tests/typecheck/should_fail/T16627.stderr

T16627.hs:11:15: error:
    • No instance for (Typeable r1) arising from a use of ‘typeRep’
    • In the first argument of ‘mkTrApp’, namely ‘typeRep’
      In the first argument of ‘mkTrApp’, namely ‘typeRep `mkTrApp` a’
      In the expression: typeRep `mkTrApp` a `mkTrApp` b
